--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,4 +1,10 @@
 -----------------------------------------------------------------------------------
+3.2.1 (11-14-2017)
+
+Enabled Window Resize 
+(best to resize so the red on bottom and right size are not visable)
+
+-----------------------------------------------------------------------------------
 3.2.0 (11-02-2017)
 
 Added Missing Items (MSRT Update, Driver Update, Restarte on Update)
