--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------
-3.2.4 (11-16-2017)
+3.2.5 (11-17-2017)
 
 Enabled Window Resize
 (best to resize so the yellow on bottom and right size are not visable)
@@ -10,6 +10,8 @@ Bug fix with Showing/Hding Tray Icons
 
 Bug fix with Checkboxes on Script Option not working properly
 ^Create Restore Point, Skip Items, Restart when Done, Update Check, Update Bat, Internet Check
+
+Bug fix with Enabling Aero Snap
 
 -----------------------------------------------------------------------------------
 3.2.0 (11-02-2017)
