--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------
-3.2.5 (11-17-2017)
+3.2.6 (11-19-2017)
 
 Enabled Window Resize
 (best to resize so the yellow on bottom and right size are not visable)
@@ -12,6 +12,11 @@ Bug fix with Checkboxes on Script Option not working properly
 ^Create Restore Point, Skip Items, Restart when Done, Update Check, Update Bat, Internet Check
 
 Bug fix with Enabling Aero Snap
+
+Added Remove option for 'This PC' items
+Improved Advertising ID (Enable/Disable)
+Improved Windows Defender (Enable/Disable)
+Improved Start Suggestions (Enable/Disable)
 
 -----------------------------------------------------------------------------------
 3.2.0 (11-02-2017)
