--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------
-3.2.8 (11-21-2017)
+3.2.9 (12-05-2017)
 
 Enabled Window Resize
 (best to resize so the yellow on bottom and right size are not visable)
@@ -19,6 +19,8 @@ Improved Windows Defender (Enable/Disable)
 Improved Start Suggestions (Enable/Disable)
 
 Added Multi Xbox Apps (No seperate option for each apps)
+
+Fixed issue with "Task Manager Details" (thanks to dhoffman98)
 
 -----------------------------------------------------------------------------------
 3.2.0 (11-02-2017)
