--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------
-3.3.3 (03-14-2018)
+3.3.4 (05-10-2018)
 
 Fixed an issue with enable windows defender on newer than Annivery update didnt work
 Fixed an issue that caused an entry for disableingn app auto download to not set
@@ -11,6 +11,12 @@ Fixed some typos
 Changed how "Update Available Popup" sets ownership
 Added Enable/Disable "Various Scheduled Tasks" -Option Not in GUI
 ^^But can be done by editing script or setting file.. Since it may cause problems
+
+Added 2 apps to list 'Microsoft.GetHelp' and 'Microsoft.Wallet'
+Added Option to Enable/Disable "Re-Opening of apps on boot" (Windows Enabled by default)
+Added Account Protection Warning (Warns if not on a Microsoft account)
+Changed Look of Gui a little (added Help button)
+Added a wait for each app section to finish before continuing
 
 -----------------------------------------------------------------------------------
 3.3.0 (12-29-2017)
