--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,10 +1,12 @@
 -----------------------------------------------------------------------------------
-3.4.2 (07-03-2018)
+3.4.3 (07-10-2018)
 
 Share with Renamed to Share with/Share (it removes the share context too)
 
 Internal Script Changes
 Added Enable/Disable Long File Path
+
+More Interal Script Changes (decreased size of script a little)
 
 -----------------------------------------------------------------------------------
 3.4.0 (06-16-2018)
