--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------
-3.6.2 (09-27-2018)
+3.6.3 (10-19-2018)
 
 Added ability to see Copyright/License Information from ToS, by inputting L
 Added Switch:
@@ -7,6 +7,13 @@ Added Switch:
 
 Internal Script Improvements
 'Update.bat' file is no longer used
+
+Internal Script Changes
+Update for 'Windows Update P2P' Setting'
+Update for 'Disabling App Auto Download'
+Update/Fix for 'Start Menu Suggestions'
+Changed how 'Unpinning Startmenu Items' does it's job
+Change for 'Showing Task Manager Details'.. if it takes too long it will skip
 
 -----------------------------------------------------------------------------------
 3.6.0 (08-21-2018)
