--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------
-3.6.5 (12-20-2018)
+3.6.6 (12-28-2018)
 
 Added ability to see Copyright/License Information from ToS, by inputting L
 Added Switch:
@@ -18,6 +18,8 @@ Change for 'Showing Task Manager Details'.. if it takes too long it will skip
 Fixed a messup that caused script to not run at all
 
 Minor Script Improvement/Changes
+
+Fixed an Issue with 'This PC' Folders not showing (when selecting 'Show/Add') the folders in some cases -Solves issue #6
 
 -----------------------------------------------------------------------------------
 3.6.0 (08-21-2018)
